feat: add endpoint to get all rule ids
